// Copyright 2010-2025 Google LLC
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package operations_research;

option java_package = "com.google.ortools.util";
option java_multiple_files = true;
option csharp_namespace = "Google.OrTools.Util";

// The low 64 bits are stored in "low", and the high 64-bits (including the
// sign) are stored in "high".
message Int128 {
  int64 high = 1;
  uint64 low = 2;
}
